# rust-template

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV.md  README.md  TEMPLATE_SETUP.md  build.rs  codecov.yml  deny.toml  justfile  mise.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: close-generated-dependabot-prs.yml  pr.yml  release-plz.yml  test.yml
metrics/: bloat.txt
scripts/: binary-size-diff.py  init-template.sh
src/: cli.rs  errors.rs  lib.rs  logging.rs  main.rs  version.rs
tests/: cli.rs  integration.rs  property.rs
